force-app/main/default/objects/Confetti_Theme__mdt/fields/Color_2__c.field-meta.xml
<CustomField>
    <fullName>Color_2__c</fullName>
    <description>Hex colour code, e.g. #FFFFFF. Required.</description>
    <label>Colour 2</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>