force-app/main/default/objects/Confetti_Theme__mdt/fields/Color_3__c.field-meta.xml
<CustomField>
    <fullName>Color_3__c</fullName>
    <description>Optional third hex colour code. Leave blank for a two-colour theme.</description>
    <label>Colour 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>